* type=service actions=name-charachter-replace:SEARCH,REPLACE - new default REPLACE value is ''
* type=service 'filter=(name regex /ARGUMENTS/) - introduce variables same way as type=address 'filter=(name regex //)-  'possible variables to bring in as argument: $$current.name$$ / $$protocol$$ / $$destinationport$$ / $$soruceport$$ / $$timeout$$'

BUGFIX:
* type=appid-toolbox | bugfix for none declared variable php 8.1
* type=rule | bugfix 'filter=(dst has.recursive.from.query subquer1)' - adjust behaviour as for 'src has.recursive.from.query'
* type=address actions=move:shared | bugfix - add validation if address object has tag, that this tag must be available at target DeviceGroup
* type=vendor-migration vendor=ciscoasa - bugfix if staticroute destination is using wildcard netmask
* type=rule ruletype=nat 'actions=snat-set-interface:ethernet1$$2' | bugfix to change config also in offline config mode
* type=application 'actions=move:DGname' | bugfix if XMLnode for TargetDG is not yet available

GENERAL:
* develop f5_bigip.php | improvement - PANOS do not support ServiceGroup description


2.1.7 (20230525)
UTIL:
* type=xml-issue | extend for duplicate search on readonly device-group

BUGFIX:
* type=address-/service-merger | bugfix if two childDGs are having same object name and value - but somewhere in parentDG hierarchy below the target location DG planned for creating merged object - object with different value is available
* type=tag-merger | bugfix to exclude only these tag with different value (different color) - and merge with same value

GENERAL:


2.1.6 (20230525)
UTIL:
* type=rule-compare | improve output to also fit for argument 'shadow-json'
* class Address/ServiceCommon | improve text output for type=address-/service-merger
* type=upload | extend to copy XML node from argument in= to argument out= - first version focus on Device-Group

BUGFIX:
* type=service-merger | bugfix for merging objects which are overwritten but with different protocol