@@ -8,6 +8,7 @@ UTIL:
 * type=dhcp | introduce 'actions=dhcp-server-reservation-create:IP,mac'
 * type=service actions=name-charachter-replace:SEARCH,REPLACE - new default REPLACE value is ''
 * type=service 'filter=(name regex /ARGUMENTS/) - introduce variables same way as type=address 'filter=(name regex //)-  'possible variables to bring in as argument: $$current.name$$ / $$protocol$$ / $$destinationport$$ / $$soruceport$$ / $$timeout$$'
+* type=service | introduce actions=timeout-halfclose-set/timeout-timewait-set & filter=(timeout-halfclose is.set/timeout-timewait is.set / timeout-halfclose.value <>=! / timeout-timewait.value >,<,=,!
 
 BUGFIX:
 * type=appid-toolbox | bugfix for none declared variable php 8.1
